--- a/package.json
+++ b/package.json
@@ -9,36 +9,37 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5",
-    "pinia": "^2.2.6",
-    "chart.js": "^4.4.6",
-    "vue-chartjs": "^5.3.1",
-    "lucide-vue-next": "^0.344.0",
     "@fullcalendar/core": "^6.1.10",
-    "@fullcalendar/vue3": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
-    "@fullcalendar/timegrid": "^6.1.10",
     "@fullcalendar/interaction": "^6.1.10",
-    "next": "16.0.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "@fullcalendar/timegrid": "^6.1.10",
+    "@fullcalendar/vue3": "^6.1.10",
+    "@supabase/supabase-js": "^2.87.1",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.555.0",
-    "tailwind-merge": "3.4.0"
+    "lucide-vue-next": "^0.344.0",
+    "next": "16.0.6",
+    "pinia": "^2.2.6",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "tailwind-merge": "3.4.0",
+    "vue": "^3.5.12",
+    "vue-chartjs": "^5.3.1",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
-    "typescript": "^5.6.3",
-    "vite": "^6.0.5",
-    "vue-tsc": "^2.1.10",
-    "tailwindcss": "^3.4.17",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss-animate": "^1.0.7",
     "@types/node": "^22.10.2",
     "@types/react": "19.2.7",
-    "@types/react-dom": "19.2.3"
+    "@types/react-dom": "19.2.3",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.6.3",
+    "vite": "^6.0.5",
+    "vue-tsc": "^2.1.10"
   }
 }
